2007-01-03  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* NEWS:
	FvwmIconBox IconColorset's bg wasn't updated immediately.

2007-01-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.c (main):
	close all open fds upon startup
	reopen stdin, stdout and stderr if necessary
	(reopen_fd):
	new function

	* fvwm/module_interface.c (do_execute_module):
	simplified error handling
	check maximum fd when creating modules

	* fvwm/events.c (My_XNextEvent):
	* fvwm/fvwm.c (main):
	replaced fd_width with fvwmlib_max_fd

	* libs/fvwmlib.h:
	* libs/System.c (fvwmlib_init_max_fd):
	added function and fvwmlib_max_fd

	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_interface.c (CMD_ModuleSynchronous):
	switch back to using FD_SET

	* fvwm/events.c (My_XNextEvent:
	* fvwm/module_interface.h:
	* fvwm/module_interface.c:
	hide module structure members with access macros and use them
	everywhere

2007-01-02  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_interface.c (module_add_to_fdsets):
	* fvwm/module_interface.h:
	created new function that also checks for too many open fds

	* fvwm/module_interface.c (CMD_ModuleSynchronous):
	* fvwm/events.c (My_XNextEvent):
	now using module_add_to_fdset to add pipes to the fdsets

2007-01-01  Renato Caldas  <seventhguardian@gmail.com>

	* libs/defaults.h (MAX_NUM_MODULES):
	* fvwm/module_interface.c (module_alloc):
	(do_execute_module):
	removed check for MAX_NUM_MODULES - not needed, done by the O.S.

	* fvwm/module_interface.c (do_execute_module):
	moved the allocation call to the end of the sanity checks and pipe
	creation - better for performance

2007-01-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	END MODULE STRUCT PATCHES

	* fvwm/module_interface.c (do_execute_module):
	fixed another memory leak

2007-01-01  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_interface.h:
	* fvwm/module_interface.c:
	* fvwm/modconf.c:
	renamed struct module member "pipeName" and "pipeAlias" to "name"